# Kalmeron-Two

./: .env.example  .firebaserc  .gitignore  .gitleaks.toml  .lighthouserc.json  .npmrc  .replit  .semgrepignore  .trivyignore  .windsurfrules  AGENTS.md  AUDIT_REPORT_2026-04-26.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_AUDIT_2026.md  DESIGN_LANGUAGE_PLAN.md  INVESTOR_DEMO_READY_2026-04-28.md  LICENSE  PROJECT_BRIEF.md  README.md  SECURITY.md  SECURITY_FIX_PLAN.md  SECURITY_FIX_PLAN_2026-04-28_PART2.md  SKILL.md  STRATEGIC_MASTER_PLAN.md  USER_INTERVENTION_REQUIRED.md  UX_AUDIT_REPORT.md  components.json  dev-server.mjs  dev-start.sh  docs_AI_MODELS.md  docs_DISASTER_RECOVERY.md  docs_MULTI_REGION.md  docs_VECTOR_DB_MIGRATION.md  eslint.config.mjs  firebase-applet-config.json  firebase-blueprint.json  firebase.json  (+25 more)
.agents/: agent_assets_metadata.toml
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  codeql-config.yml  dependabot.yml  labeler.yml  labels.yml  markdown-link-check.json  release-please-config.json  release.yml
.wolf/: anatomy.md  buglog.json  cerebrum.md
app/: README.md  _page-client.tsx  error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
attached_assets/: 8_Run_tests_1777395007572.txt  8_Run_tests_1777399541693.txt  KALMERON_INVESTOR_DEMO_PROMPT_1777349490366.md  (+42 more)
audit/: benchmarks.ts  config.ts  (+5 more)
services/token-meter/: Cargo.toml  README.md  run.sh
services/token-meter/src/: main.rs
(+1438 files in other folders)
