[package]
name = "token-meter"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Hot-path token counting microservice using tiktoken-rs."
license = "Proprietary"

[[bin]]
name = "token-meter"
path = "src/main.rs"

[profile.release]
# LTO + codegen-units=1 give ~10% extra perf but multiply build time by ~5x.
# Enable them in CI/production builds via `--profile release-prod`.
lto = false
codegen-units = 16
strip = true

[profile.release-prod]
inherits = "release"
lto = "fat"
codegen-units = 1

[dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio", "tower-log"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiktoken-rs = "0.6"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
